--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,15 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+body > main,
+body > nav,
+body > .brand {
+  display: flex;
+  flex-direction: column;
+  width: 1000px;
+  margin: 18px auto 24px auto;
+}
+
 a {
   color: inherit;
   text-decoration: none;
