--- a/src/app/apps/apps.module.css
+++ b/src/app/apps/apps.module.css
@@ -3,4 +3,11 @@
   border-radius: 8px;
   background-color: #333;
   padding: 30px;
+  margin-bottom: 20px;
+}
+
+.appFilter {
+  display: flex;
+  margin: 20px 0;
+  gap: 16px;
 }
