Background was off in light mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-end-rgb: 60, 60, 60;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
@@ -86,6 +86,8 @@ body {
 }
 
 body {
+  min-height: 100vh;
+  margin: 0 2rem;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
