--- a/src/app/apps/[slug]/edit/edit.module.css
+++ b/src/app/apps/[slug]/edit/edit.module.css
@@ -6,7 +6,10 @@
     border: 1px solid #ccc;
 
 }
-
+.row > a {
+    text-decoration: underline;
+    margin-right: 1rem;
+}
 .row > p {
     margin-right: 1rem;
 }
